[package]
name = "esp-idf-ble"
version = "0.0.1"
edition = "2021"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
resolver = "2"

[profile.release]
opt-level = "s"
incremental = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
default = ["std"]

std = ["native", "experimental", "esp-idf-sys/std", "esp-idf-svc/std", "embedded-svc/std"]
native = ["esp-idf-sys/native"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

no_std = ["hashbrown"]

[dependencies]
esp-idf-sys = { version = "0.31", default-features = false,  features = ["binstart"] }
esp-idf-svc = { version = "0.42.1", default-features = false }
esp-idf-hal = { version = "0.38", default-features = false }
embedded-svc = { version = "0.22.1", default-features = false }
embedded-hal = { version="0.2", default-features = false }

log = { version = "0.4", default-features = false }
hashbrown = { version = "0.12.3", optional = true }

[build-dependencies]
embuild = "0.29"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
